Sun Nov  2 22:45:52 UTC 2014  Phil Mesnier  <mesnier_p@socket.net>

        * orbsvcs/tests/ImplRepo/NotifyService/ntfy.conf:
        * orbsvcs/tests/ImplRepo/NotifyService/run_test.pl:
        * orbsvcs/tests/ImplRepo/NotifyService/test.cpp:
          Fix to work on windows and to get past a Notify start up race.

Fri Oct 31 20:26:36 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/ImplRepo/NotifyService/run_test.pl:
          Fix up the various command line arguments to get the notify
          service started by the implementation repository.

Thu Oct 30 13:55:13 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/ImplRepo_Service/AsyncAccessManager.h:
        * orbsvcs/ImplRepo_Service/AsyncAccessManager.cpp:
        * orbsvcs/ImplRepo_Service/ImR_Locator.idl:
        * orbsvcs/ImplRepo_Service/ImR_Locator_i.h:
        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
        * orbsvcs/ImplRepo_Service/Locator_Options.h:
        * orbsvcs/ImplRepo_Service/Locator_Options.cpp:
        * orbsvcs/ImplRepo_Service/Server_Info.h:
        * orbsvcs/ImplRepo_Service/Server_Info.cpp:
        * orbsvcs/ImplRepo_Service/UpdateableServerInfo.cpp:
          Reintroduced the restart attempt limiting. In conditions where
          implicit restarting is allowed (ie not MANUAL mode), the locator
          will honor the specified start limit. This will result in a
          TRANSIENT exception to the client and the count is reset. To
          prevent any restart attempts after the limit is reached, start the
          locator with the new command line argument --lockout. In this case
          all attempts to restart are prevented until the tao_imr update
          command is used to reset the start counter.

          In addtion, this commit includes unused member removal and related
          cleanup.

        * bin/tao_other_tests.lst:
        * orbsvcs/tests/ImplRepo/RestartServer/run_test.pl: