@@ -3,9 +3,13 @@
 #include "orbsvcs/CosNotifyChannelAdminC.h"
 #include "orbsvcs/CosNotifyCommC.h"
 #include "ace/Log_Msg.h"
+#include "ace/OS_NS_unistd.h"
 
 int ACE_TMAIN (int argc, ACE_TCHAR *argv[])
 {
+  bool success = false;
+  int retries = 5;
+
   try
     {
       CORBA::ORB_var orb = CORBA::ORB_init (argc, argv);
@@ -15,23 +19,35 @@ int ACE_TMAIN (int argc, ACE_TCHAR *argv[])
 
       if (CORBA::is_nil (obj.in ()))
         ACE_ERROR_RETURN ((LM_ERROR,
-                           "Could not resolve Notify Service"),
+                           ACE_TEXT ("Could not resolve Notify Service")),
                           1);
-      try
-        {
-          CosNotifyChannelAdmin::EventChannelFactory_var notify_factory_ =
-            CosNotifyChannelAdmin::EventChannelFactory::_narrow (obj.in ());
-        }
-      catch (CORBA::OBJECT_NOT_EXIST &)
-        {
-          ACE_DEBUG ((LM_DEBUG, "Test caught Object Not Exist, retrying\n"));
-          CosNotifyChannelAdmin::EventChannelFactory_var notify_factory_ =
-            CosNotifyChannelAdmin::EventChannelFactory::_narrow (obj.in ());
-        }
 
+      for (int i = 0; !success && i < retries; i++)
+        {
+          try
+            {
+              CosNotifyChannelAdmin::EventChannelFactory_var notify_factory_ =
+                CosNotifyChannelAdmin::EventChannelFactory::_narrow (obj.in ());
+              success = true;
+            }
+          catch (CORBA::OBJECT_NOT_EXIST &)
+            {
+              ACE_DEBUG ((LM_DEBUG,
+                          ACE_TEXT ("Test caught Object Not Exist, retry %d\n"),
+                          i));
+              ACE_OS::sleep (1);
+            }
+        }
       orb->destroy ();
 
-      ACE_DEBUG ((LM_DEBUG, "Test Successful\n"));
+      if (success)
+        {
+          ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("Test Successful\n")));
+        }
+      else
+        {
+          ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("Test Retries exceeded\n")));
+        }
     }
   catch (const CORBA::Exception& ex)
     {
@@ -39,5 +55,5 @@ int ACE_TMAIN (int argc, ACE_TCHAR *argv[])
       return 1;
     }
 
-  return 0;
+  return success ? 0 : 1;
 }
